--- a/index.html
+++ b/index.html
@@ -22,32 +22,23 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.2.1/math.min.js"></script>
 </head>
 <body>
+    <br>
     <div class="container">
         <div class="row">
-            <div id="app_single" class="col-xs-9">
-                <multiselect
-                v-model="value"
-                placeholder="Select csv file"
-                :options="options"
-                :custom-label="customLabel"
-                >
-              </multiselect>
+            <div id="app_single" class="col-xs-10">
+                <input  id="csvPath" placeholder="Enter https csv path">
             </div>
             <div class="col-xs-1">
                 <button id="singleSelect" class="btn-xs btn-primary">Select</button>
             </div>
-            <div class="col-xs-2">
-                <a id="singleSelectUpload" class="btn fa fa-upload fa-fw" data-toggle="modal" data-target="#myModal" style="color:violet;" data-toggle="tooltip" data-placement="top"
-                title="Click to upload CSV !!!"></a>
+            <div class="col-xs-1">
                 <a id="singleSelectDownload" href="#" class="btn fa fa-download fa-fw" target="_blank" style="color:blueviolet;" data-toggle="tooltip" data-placement="top"
                 title="Click to download CSV !!!"></a>
-                <a id="singleSelectTrash" href="" class="btn fa fa-trash fa-fw" style="color:red;" data-toggle="tooltip" data-placement="top"
-                title="Click to delete CSV !!!" disabled="disabled"></a>
             </div>
         </div>
         <br>
         <div id="attributeSelect" class="row" hidden>
-            <div id="app" class="col-xs-9">
+            <!--<div id="app" class="col-xs-10">
                 <multiselect
                 v-model="value"
                 placeholder="Searchable multi select csv column attributes"
@@ -57,9 +48,9 @@
                 >
               </multiselect>
             </div>
-            <div class="col-xs-3">
+            <div class="col-xs-2">
                 <button id="multiSelectChart" class="btn-xs btn-primary">Visualize</button>
-            </div>
+            </div>-->
         </div>
     </div>
     <hr>
